<resources>
    <string name="app_name">FollowMe</string>

    <string name="no_internet">No internet</string>
    <string name="server_error">Server error</string>
    <string name="parser_error">Server Response error</string>
    <string name="wrong">Some thing went wrong</string>
    <string name="turn_on_internet">Please turn on internet before proceeding.</string>
    <string name="ok">OK</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Fogot Password?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="enable_media_permission">Enable media permission</string>
    <string name="enable_camera_permission">Enable camera permission</string>
    <string name="enable_location_permission">Enable location permission</string>
    <string name="search">Search</string>
    <string name="google_map_key">AIzaSyCxoNEJ0D5YNU0Rit7plygibG6IUBL-hds</string>
    <string name="home">Home</string>
    <string name="feeds">Feeds</string>
    <string name="create_post">Create Post</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="no_data_found">No data found</string>
    <string name="post">Post</string>
    <string name="type_your_message_here">Type your message here…</string>
    <string name="interests">Interests</string>
    <string name="photos">Photos</string>
    <string name="followers">Followers</string>
    <string name="groups">Groups</string>
    <string name="confirm">Confirm</string>
    <string name="settings">Settings</string>
    <string name="add_participants">Add Participants</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="inbox">Inbox</string>
    <string name="new_group">New Group</string>
    <string name="at_least_30_characters">.at least 30 characters</string>
    <string name="type_your_group_name">Type your group name…</string>
    <string name="create_group">Create Group</string>
    <string name="change_map_style">Change Map Style</string>
    <string name="share_location">Share location</string>
    <string name="privacy">Privacy</string>
    <string name="or_login_with">Or Login With</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="please_enter_your_registered_email">Please enter your registered email</string>
    <string name="already_have_an_account_login">Already have an account ? Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="choose_your_profile">Choose your profile</string>
    <string name="personal_profile">Personal Profile</string>
    <string name="business_profile">Business Profile</string>
    <string name="choose_business_profile_if_you_want_to_advertise_your_business_on_follow_me">Choose business profile if you want to advertise your business on Follow Me</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="tell_a_little_more">Tell a little more about your interests</string>
    <string name="sign_up">Sign Up</string>
    <string name="not_valid_token">Not a valid token</string>


</resources>
