<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:checked="true"
        android:icon="@drawable/ic_home_selected"
        android:title="@string/home" />

    <item
        android:id="@+id/menu_all_post"
        android:icon="@drawable/ic_feed_deselected"
        android:title="@string/feeds" />

    <item
        android:id="@+id/menu_create_post"
        android:icon="@drawable/ic_add_circle_white"
        android:title="@string/create_post" />

    <item
        android:id="@+id/menu_notifications"
        android:icon="@drawable/ic_bell_white"
        android:title="@string/notifications" />

    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/ic_user_deselected"
        android:title="@string/profile" />

</menu>