<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="callback"
            type="com.techeytech.followme.base.BaseCallback" />

    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar"
                app:callback="@{callback}" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp">

                <ImageView
                    android:id="@+id/image_profile"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_70sdp"
                    android:background="@drawable/ic_circle"
                    android:padding="@dimen/_2sdp"
                    android:src="@drawable/image_profile_circle"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_toEndOf="@+id/image_profile"
                    android:orientation="vertical">

                    <TextView
                        style="@style/CustomTextViewMedium"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:ellipsize="marquee"
                        android:singleLine="true"
                        android:text="John Doe"
                        android:textSize="@dimen/_16sdp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/text_followers_count"
                                style="@style/CustomTextViewRegular"
                                android:text="1.2k"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_10sdp" />

                            <TextView
                                style="@style/CustomTextViewRegular"
                                android:text="@string/followers"
                                android:textColor="@color/gray"
                                android:textSize="@dimen/_10sdp" />

                        </LinearLayout>

                        <VideoView
                            android:layout_width="0.5dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/_30sdp"
                            android:layout_marginEnd="@dimen/_30sdp"
                            android:background="@color/gray" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/text_groups_count"
                                style="@style/CustomTextViewRegular"
                                android:text="10"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_10sdp" />

                            <TextView
                                style="@style/CustomTextViewRegular"
                                android:text="@string/groups"
                                android:textColor="@color/gray"
                                android:textSize="@dimen/_10sdp" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>


            </RelativeLayout>

            <TextView
                style="@style/CustomTextViewMedium"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:text="@string/interests"
                android:textSize="@dimen/_16sdp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_interests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp" />

            <TextView
                style="@style/CustomTextViewMedium"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:text="@string/photos"
                android:textSize="@dimen/_16sdp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_photos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="-10dp" />

                <TextView
                    android:id="@+id/text_no_data"
                    style="@style/CustomTextViewRegular"
                    android:layout_width="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:height="@dimen/_100sdp"
                    android:gravity="center"
                    android:text="@string/no_data_found"
                    android:visibility="gone" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</layout>
