<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="callback"
            type="com.techeytech.followme.base.BaseCallback" />

    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:background="@color/white"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar"
                app:callback="@{callback}" />

            <ImageView
                android:id="@+id/image_profile"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:background="?attr/selectableItemBackground"
                android:onClick="@{(v)->callback.onClick(v)}"
                android:src="@drawable/ic_camera"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/text_total_participants"
                style="@style/CustomTextViewRegular"
                android:layout_marginStart="@dimen/_15sdp"
                android:text="Participants : 10"
                android:textSize="@dimen/_14sdp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_added_participants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                app:cardCornerRadius="@dimen/_20sdp"
                app:cardElevation="@dimen/_5sdp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5sdp">

                    <EditText
                        android:id="@+id/edit_text_message"
                        style="@style/CustomEditText"
                        android:ellipsize="end"
                        android:hint="@string/type_your_group_name"
                        android:inputType="textNoSuggestions"
                        android:paddingStart="@dimen/_5sdp"
                        android:paddingEnd="@dimen/_5sdp"
                        android:singleLine="true"
                        android:textSize="@dimen/_12sdp"
                        tools:ignore="Autofill" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                style="@style/CustomTextViewRegular"
                android:layout_gravity="end"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:text="@string/at_least_30_characters"
                android:textColor="@color/gray"
                android:textSize="@dimen/_8sdp" />

        </LinearLayout>

        <Button
            android:id="@+id/button_create_group"
            style="@style/CustomButton"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/_15sdp"
            android:onClick="@{(v)->callback.onClick(v)}"
            android:text="@string/create_group" />

    </RelativeLayout>

</layout>
