<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="callback"
            type="com.techeytech.followme.base.BaseCallback" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_app_logo"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_30sdp"
                android:src="@drawable/image_app_icon"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_350sdp"
                android:layout_alignParentBottom="true"
                android:scaleType="fitXY"
                android:src="@drawable/auth_screens_back"
                tools:ignore="ContentDescription" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_350sdp"
                android:layout_below="@+id/image_app_logo"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                card_view:cardCornerRadius="@dimen/_15sdp"
                card_view:cardElevation="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/_20sdp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edit_text_email"
                            style="@style/CustomEditText"
                            android:layout_toStartOf="@+id/image_email"
                            android:hint="@string/email_address"
                            android:inputType="textEmailAddress"
                            android:lines="1"
                            tools:ignore="Autofill" />

                        <ImageView
                            android:id="@+id/image_email"
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="@dimen/_15sdp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_email"
                            tools:ignore="ContentDescription" />

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:background="@color/black" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp">

                        <EditText
                            android:id="@+id/edit_text_password"
                            style="@style/CustomEditText"
                            android:layout_toStartOf="@+id/image_lock"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:lines="1"
                            tools:ignore="Autofill" />

                        <ImageView
                            android:id="@+id/image_lock"
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="@dimen/_15sdp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_lock_square"
                            tools:ignore="ContentDescription" />

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:background="@color/black" />

                    <Button
                        android:id="@+id/button_login"
                        style="@style/CustomButton"
                        android:layout_marginTop="@dimen/_40sdp"
                        android:onClick="@{(v)->callback.onClick(v)}"
                        android:text="@string/login" />

                    <TextView
                        android:id="@+id/text_forgot_pass"
                        style="@style/CustomTextViewRegular"
                        android:layout_gravity="end"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:gravity="center"
                        android:onClick="@{(v)->callback.onClick(v)}"
                        android:padding="@dimen/_7sdp"
                        android:text="@string/forgot_password"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="italic" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:weightSum="7">

                        <View
                            android:layout_width="0dp"
                            android:layout_height="0.5dp"
                            android:layout_weight="2"
                            android:background="@color/gray" />

                        <TextView
                            style="@style/CustomTextViewRegular"
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:gravity="center"
                            android:text="@string/or_login_with" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="0.5dp"
                            android:layout_weight="2"
                            android:background="@color/gray" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_marginEnd="@dimen/_15sdp"
                            android:src="@drawable/ic_fb"
                            tools:ignore="ContentDescription" />

                        <ImageView
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:src="@drawable/ic_google_plus"
                            tools:ignore="ContentDescription" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/text_register"
                style="@style/CustomTextViewRegular"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/don_t_have_an_account_register"
                android:textColor="@color/white" />

        </RelativeLayout>

    </ScrollView>

</layout>