<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="callback"
            type="com.techeytech.followme.base.BaseCallback" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@color/white"
        android:focusableInTouchMode="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_app_logo"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_70sdp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_30sdp"
                android:src="@drawable/image_app_logo"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_350sdp"
                android:layout_alignParentBottom="true"
                android:scaleType="fitXY"
                android:src="@drawable/auth_screens_back"
                tools:ignore="ContentDescription" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_350sdp"
                android:layout_below="@+id/image_app_logo"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                card_view:cardCornerRadius="@dimen/_15sdp"
                card_view:cardElevation="@dimen/_10sdp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/_20sdp">

                    <TextView
                        android:id="@+id/text_title"
                        style="@style/CustomTextViewRegular"
                        android:text="@string/tell_a_little_more"
                        android:textSize="@dimen/_10sdp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false"
                        android:layout_below="@+id/text_title"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:id="@+id/recycler_interest"
                        tools:targetApi="lollipop" />

                    <Button
                        android:id="@+id/button_sign_up"
                        style="@style/CustomButton"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="@dimen/_40sdp"
                        android:onClick="@{(v)->callback.onClick(v)}"
                        android:text="@string/sign_up" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/text_login"
                style="@style/CustomTextViewRegular"
                android:text="@string/already_have_an_account_login"
                android:layout_alignParentBottom="true"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="center"/>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</layout>